--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "peerDependencies": {
     "react": "^16.0.0"
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.13.13",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-jsx": "^7.12.13",
@@ -67,5 +67,5 @@
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "devDependencies": {}
 }
