--- a/package.json
+++ b/package.json
@@ -53,10 +53,6 @@
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
     "react-toastify": "^7.0.3",
     "sass-loader": "^11.0.1",
     "web3": "^1.3.4",
@@ -67,5 +63,10 @@
   "files": [
     "dist"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1"
+  }
 }
