--- a/package.json
+++ b/package.json
@@ -25,13 +25,6 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.13.13",
-    "@ethersproject/providers": "^5.0.24",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/fortmatic-connector": "^6.1.6",
-    "@web3-react/frame-connector": "^6.0.9",
-    "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.1.9",
-    "@web3-react/walletlink-connector": "^6.1.9",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
@@ -46,16 +39,11 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
-    "gh-pages": "^2.2.0",
-    "madge": "^4.0.2",
-    "microbundle-crl": "^0.13.10",
     "node-sass": "^5.0.0",
-    "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "prettier": "^2.0.4",
     "react-toastify": "^7.0.3",
     "sass-loader": "^11.0.1",
-    "web3": "^1.3.4",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
     "webpack-node-externals": "^2.5.2"
@@ -64,9 +52,12 @@
     "dist"
   ],
   "devDependencies": {
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "web3": "^1.3.4"
   }
 }
