--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "prettier": "^2.0.4",
     "react-toastify": "^7.0.3",
     "sass-loader": "^11.0.1",
-    "webpack": "^5.28.0",
+    "webpack": "4.42.0",
     "webpack-cli": "^4.6.0",
     "webpack-node-externals": "^2.5.2"
   },
