--- a/package.json
+++ b/package.json
@@ -19,12 +19,19 @@
     "react": "^16.0.0"
   },
   "dependencies": {
+    "react-toastify": "^7.0.3"
+  },
+  "files": [
+    "dist"
+  ],
+  "devDependencies": {
     "@babel/core": "^7.13.13",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.13.13",
+    "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
     "@web3-react/frame-connector": "^6.0.9",
     "@web3-react/injected-connector": "^6.0.7",
@@ -33,7 +40,6 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
@@ -47,21 +53,14 @@
     "node-sass": "^5.0.0",
     "path": "^0.12.7",
     "prettier": "^2.0.4",
-    "react-toastify": "^7.0.3",
-    "sass-loader": "^10.1.1",
-    "webpack": "4.44.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-node-externals": "^2.5.2"
-  },
-  "files": [
-    "dist"
-  ],
-  "devDependencies": {
-    "@web3-react/core": "^6.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
-    "web3": "^1.3.4"
+    "sass-loader": "^10.1.1",
+    "web3": "^1.3.4",
+    "webpack": "4.42.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
